# Tester-Tool

./: .gitignore  LICENSE  README.md  build.spec  build_win.bat  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: user-guide.md
src/tester/: __init__.py  __main__.py  gui.py  main.py  parser.py  processor.py  validator.py
test-data/: final-done.xlsx  final.xlsx  温升表（已放入原始数据）-利信  1200.xlsx
test-data/1/: 数据 inst0 A-34972A-02975 2025_3_11 09_53_40 1.csv
test-data/2/: 数据 inst0 A-34972A-27479 2025_3_11 09_53_40 4.csv
test-data/3/: 数据 inst0 A-34972A-27324 2025_3_11 09_53_40 3.csv
test-data/4/: 数据 inst0 A-34972A-14617 2025_3_11 09_53_40 2.csv
test-data/5/: 5.csv
